; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/parser/extr_parse_target.c_ExpandIndirectionStar.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/parser/extr_parse_target.c_ExpandIndirectionStar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, %struct.TYPE_5__*, i32, i32)* @ExpandIndirectionStar to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @ExpandIndirectionStar(i32* %0, %struct.TYPE_5__* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_5__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %11 = call %struct.TYPE_5__* @copyObject(%struct.TYPE_5__* %10)
  store %struct.TYPE_5__* %11, %struct.TYPE_5__** %6, align 8
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i64 @list_length(i32 %17)
  %19 = sub nsw i64 %18, 1
  %20 = call i32 @list_truncate(i32 %14, i64 %19)
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %21, i32 0, i32 0
  store i32 %20, i32* %22, align 4
  %23 = load i32*, i32** %5, align 8
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %25 = bitcast %struct.TYPE_5__* %24 to i32*
  %26 = load i32, i32* %8, align 4
  %27 = call i32* @transformExpr(i32* %23, i32* %25, i32 %26)
  store i32* %27, i32** %9, align 8
  %28 = load i32*, i32** %5, align 8
  %29 = load i32*, i32** %9, align 8
  %30 = load i32, i32* %7, align 4
  %31 = call i32* @ExpandRowReference(i32* %28, i32* %29, i32 %30)
  ret i32* %31
}

declare dso_local %struct.TYPE_5__* @copyObject(%struct.TYPE_5__*) #1

declare dso_local i32 @list_truncate(i32, i64) #1

declare dso_local i64 @list_length(i32) #1

declare dso_local i32* @transformExpr(i32*, i32*, i32) #1

declare dso_local i32* @ExpandRowReference(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
